<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yuntong.arsearch.activity.ModifyPwdActivity"
    android:background="@color/color_white"
    android:orientation="vertical">

    <include layout="@layout/toolbar_"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/color_white">

        <EditText
            android:id="@+id/edt_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/old_pwd"
            android:textColorHint="@color/gray_edit_hit"
            android:textSize="14sp"
            android:maxLength="16"
            android:digits=",.!@#$%0123456789abcdefghijgklmnopqrstuvwxyzABCDEFGHIJGKLMNOPQRSTUVWXYZ"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/gray_line"/>

        <EditText
            android:id="@+id/edt_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:maxLength="16"
            android:digits=",.!@#$%0123456789abcdefghijgklmnopqrstuvwxyzABCDEFGHIJGKLMNOPQRSTUVWXYZ"
            android:hint="@string/new_pwd"
            android:textColorHint="@color/gray_edit_hit"
            android:textSize="14sp"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/gray_line"/>

        <EditText
            android:id="@+id/edt_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/confirm_pwd"
            android:maxLength="16"
            android:digits=",.!@#$%0123456789abcdefghijgklmnopqrstuvwxyzABCDEFGHIJGKLMNOPQRSTUVWXYZ"
            android:textColorHint="@color/gray_edit_hit"
            android:textSize="14sp"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="31.5dp"
        android:layout_marginRight="31.5dp"
        android:layout_marginTop="29dp"
        android:text="@string/confirm_modify"
        android:textColor="@color/color_white"
        android:background="@color/color_green"
        android:textSize="16sp"/>

</LinearLayout>
